# incident-copilot

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
copilot/: Dockerfile  pyproject.toml
copilot/copilot/: analyzer.py  collector.py  context_builder.py  llm.py  main.py  prometheus_client.py  prompts.py  schemas.py
faults/: _common.py  bad_deploy.py  db_down.py  dependency_timeout.py  memory_exhaustion.py
loadgen/: run.py
prometheus/: prometheus.yml
sample_app/: Dockerfile  pyproject.toml  seed.py
sample_app/app/: faults.py  logging_config.py  main.py  metrics.py
scenarios/bad_deploy/: ground_truth.json  logs.jsonl  metrics.json  window.json
scenarios/db_down/: ground_truth.json  logs.jsonl  metrics.json  window.json
scenarios/dependency_timeout/: ground_truth.json  logs.jsonl  metrics.json  window.json
scenarios/memory_exhaustion/: ground_truth.json  logs.jsonl  metrics.json  window.json
scripts/: capture_scenario.py  demo.sh
