[project]
name = "copilot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "structlog>=24.1.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "anthropic>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["copilot"]
